# worklog

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Login.tsx  Settings.tsx  Worklog.tsx
frontend/src/hooks/: useToast.ts
frontend/src/lib/: pkce.ts
scripts/: deploy-azure.sh
sql/: init.sql
src/worklog_app/: __init__.py  auth.py  config.py  database.py  jira_client.py  main.py  models.py  storage.py
tests/: __init__.py  conftest.py  test_models.py
